--- a/index.html
+++ b/index.html
@@ -1,127 +1,362 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <title>简历练习</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
     <script src="./jquery.js"></script>
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <title>task 104</title>
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <style>
+        body {
+            font-family: 'Open Sans', Arial, Tahoma;
+            font-weight: 400;
+            font-size: 1em;
+            color: #363636;
+            background: #ffffff;
+        }
+        #photo {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            overflow: hidden;
+            padding: 0px;
+            background: #ededed;
+            display: inline-block;
+        }
+        .tip h1 span {
+            font-weight:bold;
+            color:#ff9955;
+        }
+        .box {
+            margin-bottom: 15px;
+        }
+        .box h2 {
+            color: #EC7263;
+            font-size: 1.8em;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+        .box h2:before {
+            content: '//';
+            margin-right: 5px;
+        }
+        .education {
+            margin-top: 20px;
+            position: relative;
+            padding: 1em 0;
+            list-style: none;
+        }
+        .education:before {
+            width: 5px;
+            height: 100%;
+            position: absolute;
+            left: 25px;
+            top: 0;
+            content: ' ';
+            display: block;
+            background: linear-gradient(to bottom, #ffffff 0%, #ec7263 7%, #ec7263 89%, #ffffff 100%);
+        }
+
+        .education .year {
+            width: 10%;
+            background: #fff;
+            padding: 10px;
+            font-size: 1.5em;
+            font-weight: 700;
+            display: inline-block;
+        }
+        .education .description {
+            width: 85%;
+            display: inline-block;
+            background: #eee;
+            margin-bottom: 10px;
+            position: relative;
+            padding: 10px 10px 0 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        #education .description:after {
+            content: '';
+            position: absolute;
+            top: 15px;
+            right: 0;
+            left: -16px;
+            height: 0;
+            width: 0;
+            border: solid transparent;
+            border-right-color: #eee;
+            border-width: 8px;
+            pointer-events: none;
+        }
+        .job {
+            margin-bottom: 15px;
+        }
+        .job .where {
+            font-size: 1.4em;
+            font-weight: bold;
+        }
+        .job .year {
+             font-size: 1.3em;
+             opacity: 0.7;
+        }
+        .job .profession {
+            font-size: 1.6em;
+            font-weight: bold;
+        }
+        .job .description {
+            font-size: 1.2em;
+            line-height: 1.5em;
+        }
+        .contact-item {
+            width: 100%;
+            float: left;
+        }
+        .contact-item .icon {
+            padding: 10px;
+            border-right: 1px solid #aaa;
+            border-bottom: 1px solid #aaa;
+            opacity: 0.2;
+        }
+        .contact-item .fa {
+            font-size: 2em;
+        }
+        .fa-fw {
+            width: 1.2857142857142858em;
+            text-align: center;
+        }
+        .contact-item .title.only {
+            margin-top: 10px;
+        }
+        .contact-item .title {
+            width: 80%;
+            width: calc(100% - 55px);
+            font-size: 1.5em;
+            font-weight: 700;
+            opacity: 0.9;
+        }
+        .pull-right {
+            float: right;
+        }
+        .item-skills {
+            height: 30px;
+            background: #F0563D;
+            color: #fff;
+            padding: 5px 10px;
+            margin-bottom: 5px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: 1.3em;
+            /* font-weight: 600; */
+        }
+        .skills-legend {
+             margin-top: 20px;
+             opacity: 0.8;
+        }
+
+        .skills-legend:before {
+            width: 100%;
+            height: 3px;
+            position: relative;
+            content: ' ';
+            display: block;
+            margin-bottom: -13px;
+            background: #c6c6c6;
+        }
+        .skills-legend div {
+            width: 25%;
+            display: inline-block;
+            font-size: 1.2em;
+            color: #a9a9a9;
+            float: left;
+        }
+        #language-skills .skill {
+            font-size: 1.3em;
+            margin: 10px 0;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #eee;
+        }
+        #language-skills .skill .icons {
+            width: 111px;
+            height: 14px;
+            background: url(http://kamsolutions.pl/projects/resume/img/star-red.png) no-repeat;
+        }
+        #language-skills .skill .icons {
+            width: 111px;
+            height: 14px;
+            background: url(http://kamsolutions.pl/projects/resume/img/star-grey.png) no-repeat;
+        }
+        .hobby {
+            color: #fff;
+            display: inline-block;
+            margin-right: 5px;
+            margin-bottom: 5px;
+            padding: 5px 5px 5px 5px;
+            background: #A75265;
+            position: relative;
+            font-size: 1.2em;
+        }
+
+
+
+
+
+
+    </style>
 </head>
 <body>
-  <style>
-      textarea {white-space: normal;}
-      .class_h_font{font-size:40px; padding :20px 0px}
-      .class_p_font{font-size:20px}
-      .class_hs_font{font-size :20px;padding:0.2em;margin-left:3px }
-  </style>
-  <h1 class="text-center"><strong>统一建模语言理论测试</strong></h1>
-  <div class=".container">
-      <div class="row">
-          <div class="col-md-4 col-xs-4"><p>考试科目：统一建模语言</p></div>
-          <div class="col-md-4 col-xs-4"><p>时间：100分钟</p></div>
-          <div class="col-md-4 col-xs-4"><p>得分：100</p></div>
-      </div>
-  </div>
-  <div class=".container">
-      <div class="row ">
-          <div class="col-md-4 col-xs-4">
-              <p>班级：<input type="text" placeholder="1班"></p>
-          </div>
-          <div class="col-md-4 col-xs-4">
-              <p>学号：<input type="text" placeholder="001"></p>
-          </div>
-          <div class="col-md-4 col-xs-4">
-              <p>姓名：<input type="text" placeholder="kelly"></p>
-          </div>
-      </div>
-  </div>
-  <div class=".container">
-      <h2>一.填空题（每空5分，共20分）</h2>
-      <ol>
-          <li><p>UML的中文全称是：<input type="text" placeholder="统一建模语言"></p></li>
-          <li>
-              <p>对象最突出的特征是：
-                  <input type="text" placeholder="封装性">
-                  <input type="text" placeholder="继承性">
-                  <input type="text" placeholder="多态性">
-              </p>
-          </li>
-      </ol>
-  </div>
+   <div class=".container">
+       <div class="row">
+           <div class="col-xs-12">
+               <div id="photo-header" class="text-center">
+                   <div id="photo" >
+                       <img src="http://kamsolutions.pl/projects/resume/img/avatar.jpg" alt="avatar">
+                   </div>
+                   <div class="tip">
+                       <h1>Hello,<br> my name is <span>Kamil</span><sup>24yo</sup> and this is my resume/cv</h1>
+                   </div>
+               </div>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-xs-12 col-sm-7">
+               <!-- about me-->
+               <div class="box">
+                   <h2>
+                       about me
+                   </h2>
+                   <p>
+                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, non, dolorem, cumque distinctio magni quam expedita velit laborum sunt amet facere tempora ut fuga aliquam ad asperiores voluptatem dolorum! Quasi.
+                   </p>
+               </div>
+               <!-- EDUCATION -->
+               <div class="box">
+                   <h2>
+                       education
+                   </h2>
+                   <ul class="education" >
+                       <li>
+                           <div class="year">1990</div>
+                           <div class=  "description">
+                               <h3>I was born in Katowice</h3>
+                               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, exercitationem, totam, dolores iste dolore est aut modi.</p>
+                           </div>
+                       </li>
+                       <li>
+                           <div class="year">2005</div>
+                           <div class=  "description">
+                               <h3>Secondary school specializing in artistic</h3>
+                               <p>Eos, explicabo, nam, tenetur et ab eius deserunt aspernatur ipsum ducimus quibusdam quis voluptatibus.</p>
+                           </div>
+                       </li>
+                       <li>
+                           <div class="year">2009</div>
+                           <div class=  "description">
+                               <h3>First level graduation in Graphic Design</h3>
+                               <p>Aspernatur, mollitia, quos maxime eius suscipit sed beatae ducimus quaerat quibusdam perferendis? Iusto, quibusdam asperiores unde repellat.</p>
+                           </div>
+                       </li>
+                       <li>
+                           <div class="year">2012</div>
+                           <div class=  "description">
+                               <h3>Second level graduation in Graphic Design</h3>
+                               <p>Ducimus, aliquam tempore autem itaque et accusantium!</p>
+                           </div>
+                       </li>
+                   </ul>
+               </div>
+               <!-- EXPERIENCES -->
+               <div class="box">
+                   <h2>experiences</h2>
+                   <div class=" job">
+                       <div class="col-xs-3">
+                           <div class="where">Google</div>
+                           <div class="year">2013-2014</div>
+                       </div>
+                       <div class="col-xs-9">
+                            <div class="profession">Front-end developer / php programmer</div>
+                            <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, et, illum perferendis veritatis velit sunt similique qui magni totam harum tempore eius laboriosam accusantium necessitatibus
+                                voluptatum? Enim, itaque dignissimos quia.</div>
+                       </div>
+                   </div>
+                   <div class="job">
+                       <div class="col-xs-3">
+                           <div class="where">Twitter</div>
+                           <div class="year">2012</div>
+                       </div>
+                       <div class="col-xs-9">
+                           <div class="profession">Web Developer</div>
+                           <div class="description">Lorem ipsum dolor sit amet,consectetur adipisicing elit. Veniam, nihil sit nemo voluptatem praesentium. Quia, qui facere consectetur libero asperiores fugiat consequuntur deserunt culpa repudiandae sed quidem voluptas explicabo soluta.</div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           <div class="col-xs-12 col-sm-5">
+               <!--CONTACT -->
+               <div class="box">
+                   <h2>contact</h2>
+                   <div class="contact-item">
+                       <div class="icon pull-left text-center"><span class="fa glyphicon glyphicon-earphone fa-fw"></span></div>
+                       <div class="title only pull-right">500 345 242</div>
+                   </div>
+                   <div class="contact-item">
+                       <div class="icon pull-left text-center"><span class="fa glyphicon glyphicon-envelope fa-fw"></span></div>
+                       <div class="title only pull-right">office@kamsolutions.pl</div>
+                   </div>
+                   <div class="contact-item">
+                       <div class="icon pull-left text-center"><span class="fa glyphicon glyphicon-knight fa-fw"></span></div>
+                       <div class="title pull-right">Twitter</div>
+                       <div class="description pull-right">https://twitter.com/WordPress</div>
+                   </div>
+                   <div class="contact-item">
+                       <div class="icon pull-left text-center"><span class="fa glyphicon glyphicon-tree-deciduous fa-fw"></span></div>
+                       <div class="title pull-right">Facebook</div>
+                       <div class="description pull-right">https://www.facebook.com/facebook</div>
+                   </div>
+                   <div class="contact-item">
+                       <div class="icon pull-left text-center"><span class="fa glyphicon glyphicon-tree-deciduous fa-fw"></span></div>
+                       <div class="title pull-right">Skype</div>
+                       <div class="description pull-right">kamsolutions.pl</div>
+                   </div>
+                   <div class="box">
+                       <h2>skills</h2>
+                       <div class="skills">
+                           <div class="item-skills" style="width 100%">HTML</div>
+                           <div class="item-skills" style="width: 90%;">CSS</div>
+                           <div class="item-skills" style="width: 80%;">jQuery</div>
+                           <div class="item-skills" style="width: 75%;">PHP</div>
+                           <div class="item-skills" style="width: 25%;">Laravel 2 (framework)</div>
+                           <div class="skills-legend clearfix">
+                               <div class="legend-left legend">Beginner</div>
+                               <div class="legend-left legend"><span>Proficient</span></div>
+                               <div class="legend-right legend"><span>Expert</span></div>
+                               <div class="legend-right legend">Master</div>
+                           </div>
+                       </div>
 
-  <div class=".container">
-      <h2>二.选择题（每题10分，共20分）</h2>
-      <ol>
-          <li>
-              <div>UML与软件工程之间的关系是：
-                  <div><input type="radio" name="radio-choice-1">(A)UML就是软件工程</div>
-                  <div><input type="radio" name="radio-choice-1" checked>(B)UML参与到软件工程中软件开发过程的几个阶段</div>
-                  <div><input type="radio" name="radio-choice-1">(C)UML与软件工程无关</div>
-                  <div><input type="radio" name="radio-choice-1">(D)UML是软件工程的一部分</div>
-              </div>
-          </li>
-          <li>
-              <div>JAVA语言支持：</div>
-              <div><input type="radio" name="radio-choice-2" checked>(A)单继承</input></div>
-              <div><input type="radio" name="radio-choice-2">(B)多继承</input></div>
-              <div><input type="radio" name="radio-choice-2">(C)单继承与多继承都支持</input></div>
-              <div><input type="radio" name="radio-choice-2">(D)单继承与多继承都不支持</input></div>
+                   </div>
+                   <!-- LANGUAGES -->
+                   <div class="box">
+                       <h2>Languages</h2>
+                       <div id="language-skills">
+                           <div class="skill">Polish <div class="icons pull-right"><div style="width: 80%;"class="icons-red"></div></div></div>
+                           <div class="skill">English <div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+                       </div>
+                   </div>
+                   <!-- HOBBIES -->
+                   <div class="box">
+                       <h2>Hobbies</h2>
+                       <div class="hobby "><span class="glyphicon glyphicon-heart-empty"></span> Photography</div>
+                       <div class="hobby "><span class="glyphicon glyphicon-heart-empty"></span> Fitness</div>
+                       <div class="hobby "><span class="glyphicon glyphicon-heart-empty"></span> Programming</div>
+                   </div>
+               </div>
+           </div>
+       </div>
 
-          </li>
-      </ol>
-  </div>
-  <div class=".container">
-      <h2>三.多选题（每题10分，共20分）</h2>
-      <ol>
-          <li>
-              <div>用例的粒度分为哪三种：</div>
-              <div><input type="checkbox" name="multi-choice-1">(A)概述级</input></div>
-              <div><input type="checkbox" name="multi-choice-1">(B)需求级</input></div>
-              <div><input type="checkbox" name="multi-choice-1">(C)用户目标级</input></div>
-              <div><input type="checkbox" name="multi-choice-1">(D)子功能级</input></div>
-          </li>
-          <li>
-              <div>类图由哪三种组成：</div>
-              <div><input type="checkbox" name="multi-choice-2">(A)名称(Name)</input></div>
-              <div><input type="checkbox" name="multi-choice-2">(B)属性(Attribute)</input></div>
-              <div><input type="checkbox" name="multi-choice-2">(C)操作(Operation)</input></div>
-              <div><input type="checkbox" name="multi-choice-2">(D)方法(Function)</input></div>
-          </li>
-      </ol>
-  </div>
-  <div class=".container">
-      <h2>四.判断题（每题10分，共20分）</h2>
-      <ol>
-          <li>
-              用例图只是用于和客户交流和沟通的，用于确定需求。<input type="radio" name="boolean-choice-1">√
-              <input type="radio" name="boolean-choice-1">×
-          </li>
-          <li>
-              在状态图中，终止状态在一个状态图中允许有任意多个。
-              <input type="radio" name="boolean-choice-2">√
-              <input type="radio" name="boolean-choice-2">×
-          </li>
-      </ol>
-  </div>
-  <div class=".container">
-      <h2>五.简答题（每题20分，共20分）</h2>
-      <ol>
-          <li>
-              <p>简述什么是模型以及模型的表现形式？</p>
-              <div><textarea rows="10" cols="100" placeholder="开放式作答">
-                  模型是对现实世界的简化和抽象，模型是对所研究的系统、过程、事物或概念的一种表达形式。
-                      可以是物理实体；可以是某种图形；或者是一种数学表达式。"</textarea>
-
-              </div>
-          </li>
-      </ol>
-  </div>
-  <br/>
-  <button type="button" class="btn btn-default" >
-      计算分数
-  </button>
+   </div>
 </body>
+</html>
 
 </html>
